[package]
authors = ["Weiyuan Wu <youngw@sfu.ca"]
description = "Order Statistics Tree for Rust"
documentation = "https://docs.rs/order-stats-tree"
edition = "2018"
keywords = ["Order Statistics", "Order Statistics Tree", "Moving Percentile"]
license = "Apache-2.0/MIT"
name = "order-stats-tree"
readme = "README.md"
repository = "https://github.com/dovahcrow/order-stats-tree"
version = "0.1.0"

[dev-dependencies]
rand = "0.8"

[profile.release]
debug = true
